# lacelang-python-executor

./: .gitignore  CONTRIBUTING.md  GOVERNANCE.md  NOTICE  README.md  bump-version.sh  lace-executor.toml  pyproject.toml
.github/workflows/: release.yml  test.yml
examples/: basic.py  env_overrides.py  extensions.py  multi_probe.py
examples/bodies/: call_0_request.json  call_0_response.json
examples/lace/: lace.config
examples/lace/scripts/auth-flow/: auth-flow.lace  result.json  vars.json
examples/lace/scripts/cookie-jar/: cookie-jar.lace  result.json
examples/lace/scripts/expect-vs-check/: expect-vs-check.lace  result.json  vars.json
examples/lace/scripts/health/: health.lace  result.json
examples/lace/scripts/redirect-follow/: redirect-follow.lace  result.json
examples/lace/scripts/schema-validation/: result.json  schema-validation.lace  vars.json
src/lacelang_executor/: __init__.py  __main__.py  api.py  cli.py  config.py  executor.py  http_timing.py
src/lacelang_executor/extensions/: badNamespace.laceext  configDemo.config  configDemo.laceext  hookTrace.laceext  laceBaseline.config  laceBaseline.laceext  laceEmitRecovery.config  laceEmitRecovery.laceext  laceNotifications.config  laceNotifications.laceext  notifCounter.laceext  notifRelay.laceext  notifWatch.laceext
src/lacelang_executor/laceext/: __init__.py  dsl_lexer.py  dsl_parser.py  interpreter.py  loader.py  primitives.py  registry.py
tests/: conftest.py  test_api.py  test_config.py  test_integration.py  test_schema.py  test_smoke.py
